--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="app">
         <h1>{{message}}</h1>
-        <img :src="pictures" alt="">
+        <img :src="picture" alt="{{message}}">
     </div>
     <script src="main.js"></script>
 </body>
